--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "bcrypt": "^0.8.6",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.0.0",
     "request-helpers": "^2.0.1",
@@ -26,11 +26,11 @@
     "sails-util": "^0.10.4"
   },
   "devDependencies": {
-    "sails": "~0.11.0",
-    "sails-disk": "^0.10.7",
     "barrels": "^1.6.4",
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
+    "sails": "~0.11.0",
+    "sails-disk": "^0.10.7",
     "sails-memory": "^0.10.6",
     "supertest": "^1.2.0"
   },
